--- a/index.html
+++ b/index.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Password generator app</title>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
 
-  Password Generator
+    <link rel="stylesheet" href="dist/css/main.min.css" />
 
-  P4$5W0rD!
-
-  Character Length
-
-  Include Uppercase Letters
-  Include Lowercase Letters
-  Include Numbers
-  Include Symbols
-
-  Strength
-
-  Generate
-
-</body>
+    <title>Frontend Mentor | Password generator app</title>
+  </head>
+  <body>
+    <main>
+      <div class="container">
+        <h2 class="container__heading">Password Generator</h2>
+        <div class="card">
+          <div class="password">
+            <h1 class="password__output">P4$5W0rD!</h1>
+            <button class="password__copy-btn">
+              <svg class="icon">
+                <use xlink:href="assets/images/sprite.svg#icon-copy"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
+
+Password Generator P4$5W0rD! Character Length Include Uppercase Letters Include
+Lowercase Letters Include Numbers Include Symbols Strength Generate
