Work on CSS, HTML and JS

--- a/index.html
+++ b/index.html
@@ -36,15 +36,17 @@
               <span class="description">Character Length</span>
               <span class="range__value" id="value">0</span>
             </div>
-            <input
-              type="range"
-              min="0"
-              max="20"
-              value="0"
-              id="range"
-              class="selectors__slider"
-            />
-            <div class="selectors__progress"></div>
+            <div class="selectors__range-box">
+              <div class="selectors__progress"></div>
+              <input
+                type="range"
+                min="0"
+                max="20"
+                value="0"
+                id="range"
+                class="selectors__slider"
+              />
+            </div>
           </div>
         </div>
       </div>
