Work on check box elements

--- a/index.html
+++ b/index.html
@@ -48,6 +48,56 @@
               />
             </div>
           </div>
+
+          <div class="selectors__check-box--container">
+            <div class="check__box">
+              <input
+                type="checkbox"
+                id="uppercase-char"
+                name="uppercase-char"
+                class="check__box-input"
+              />
+              <label for="uppercase-char" class="check__box-label"
+                >Include Uppercase Letters</label
+              >
+            </div>
+
+            <div class="check__box">
+              <input
+                type="checkbox"
+                id="lowercase-char"
+                name="lowercase-char"
+                class="check__box-input"
+              />
+              <label for="lowercase-char" class="check__box-label"
+                >Include Lowercase Letters</label
+              >
+            </div>
+
+            <div class="check__box">
+              <input
+                type="checkbox"
+                id="numbers-char"
+                name="numbers-char"
+                class="check__box-input"
+              />
+              <label for="numbers-char" class="check__box-label"
+                >Include Numbers</label
+              >
+            </div>
+
+            <div class="check__box">
+              <input
+                type="checkbox"
+                id="symbols-char"
+                name="symbols-char"
+                class="check__box-input"
+              />
+              <label for="symbols-char" class="check__box-label"
+                >Include Symbols</label
+              >
+            </div>
+          </div>
         </div>
       </div>
     </main>
