Finished desktop design

--- a/index.html
+++ b/index.html
@@ -102,11 +102,13 @@
             <div class="strength">
               <span class="strength__text">strength</span>
               <div class="strength__bars-box">
-                <p class="strength__level">TEST</p>
-                <div class="strength__bar"></div>
-                <div class="strength__bar"></div>
-                <div class="strength__bar"></div>
-                <div class="strength__bar"></div>
+                <p class="strength__level"></p>
+                <div class="strength__bars-container" data-value="0">
+                  <div class="strength__bar"></div>
+                  <div class="strength__bar"></div>
+                  <div class="strength__bar"></div>
+                  <div class="strength__bar"></div>
+                </div>
               </div>
             </div>
           </div>
