--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="strength">
               <span class="strength__text">strength</span>
               <div class="strength__bars-box">
-                <p class="strength__level"></p>
+                <p class="strength__level">000</p>
                 <div class="strength__bars-container" data-value="0">
                   <div class="strength__bar"></div>
                   <div class="strength__bar"></div>
