Work on HTML, CSS and JS

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
       <div class="container">
         <h1 class="container__heading">Password Generator</h1>
         <div class="password">
-          <h2 class="password__output">P4$5W0rD!</h2>
+          <div class="password__output-box">
+            <h2 class="password__output">P4$5W0rD!</h2>
+          </div>
           <p class="copied__text">Copied</p>
           <button class="password__copy-btn">
             <svg class="icon">
